deploy/k8s/arq-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arq-web-svc
  labels:
    app: arq-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http-web
      protocol: TCP
      name: http
  selector:
    app: arq-web
